# dev-handbook

./: .gitignore  .nojekyll  LICENSE  README.md  _sidebar.md  dev-handbook.code-workspace  index.html
.github/: copilot-instructions.md
.github/workflows/: build-templates.yml
docs/: README.md  _sidebar.md  contributing.md  index.md
docs/best-practices/: code-standards.md  git-workflow.md  security.md
docs/getting-started/: overview.md  prerequisites.md  setup.md
docs/playbooks/: git-usage.md  overview.md  python-projects.md
docs/scripts/: bash.md  overview.md  powershell.md  python.md
docs/scripts/powershell/: New-PyProject.ps1
docs/templates/: README.md  catalog.md  nodejs-api.md  python-cli.md  static-website.md
scripts/bash/: README.md  delete-zone-identifiers.sh  new-py-project.sh  setup-git-config.sh  setup-git.sh  system-info.sh  zip-templates.sh
scripts/powershell/: New-PyProject.ps1  README.md  Setup-Git.ps1  Setup-GitConfig.ps1  Zip-Templates.ps1  get-system-info.ps1
scripts/python/: README.md  requirements.txt  system_info.py
templates/cli-pyproject/: .gitignore  README.md  pyproject.toml
templates/cli-pyproject/src/cli_app/: __main__.py
templates/fastapi-minimal/: README.md  pyproject.toml
templates/nodejs-api/: .env.example  .gitignore  README.md  package.json
templates/nodejs-api/src/: app.js
templates/py-minimal/: README.md  pyproject.toml
templates/python-cli/: .gitignore  README.md  requirements.txt  setup.py
templates/static-website/: .gitignore  README.md  index.html
templates/static-website/css/: responsive.css  (+1 more)
(+5 files in other folders)
